--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/jetstream": "^5.3",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
-        "livewire/livewire": "^3.0"
+        "livewire/livewire": "^3.0",
+        "fruitcake/laravel-cors": "^5.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.15",
