--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
             - '.:/var/www/html'
         networks:
             - sail
+        user: root
         depends_on:
             - mysql
             - redis
@@ -43,6 +44,7 @@ services:
             - './vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
         networks:
             - sail
+
         healthcheck:
             test:
                 - CMD
